<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/applogo"
        android:src="@drawable/appname"
        tools:ignore="ImageContrastCheck" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:autofillHints="emailAddress" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="350dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_input"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints="" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00D100"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />
    <!-- Create Account Text -->
    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/don_t_have_an_account_create_one"
        android:textColor="#0000FF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/forgot_your_password"
        android:textColor="#0000FF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_account_text"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/sign_in_using"
        android:textColor="#000000"
        android:textSize="18sp"
        />

    <!-- Google Login Button -->
    <ImageView
        android:id="@+id/google_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="140dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/google"
        android:src="@drawable/google"
        android:clickable="true"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck"
        android:focusable="true" />

    <!-- Facebook Login Button -->
    <ImageView
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="140dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/facebook"
        android:gravity="center_vertical"
        android:src="@drawable/fb"
        android:clickable="true"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck"
        android:focusable="true" />

</RelativeLayout>